[package]
name = "linear-cli"
version = "0.3.27"
edition = "2021"
description = "A powerful CLI for Linear.app - manage issues, projects, cycles, and more from your terminal"
authors = ["scwrcd"]
license = "MIT"
repository = "https://github.com/Finesssee/linear-cli"
homepage = "https://github.com/Finesssee/linear-cli"
readme = "README.md"
keywords = ["linear", "cli", "project-management", "issues", "productivity"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "linear-cli-*.tar.gz",
    "linear-cli-*.zip",
]

[[bin]]
name = "linear-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls-native-roots", "stream", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
tabled = "0.20"
dirs = "5"
toml = "0.8"
anyhow = "1"
dialoguer = "0.11"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rand = "0.8"
csv = "1"
keyring = { version = "3", optional = true }
sha2 = "0.10"
open = "5"
url = "2"
base64 = "0.22"
hmac = "0.12"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-x86_64-pc-windows-msvc.zip"
pkg-fmt = "zip"

[features]
default = []
secure-storage = ["keyring"]
